# SecureFinAI_Contest_2025

./: LICENSE  README.md
Task_1_FinRL_DT_Crypto_Trading/: .gitignore  CHANGELOG.md  FINAL_VERIFICATION_REPORT.md  GIT_SETUP_INSTRUCTIONS.md  MAKEFILE_USAGE.md  MPS_README.md  Makefile  QUICK_START.md  README.md  WORKFLOW_FIX.md  create_test_split.py  device_utils.py  download_data.py  dt_crypto.py  evaluation.py  pyproject.toml  requirements.txt  run_with_mps.py  test_mps.py
Task_1_FinRL_DT_Crypto_Trading/offline_data_preparation/: README.md  convert_replay_buffer_to_trajectories.py  data_config.py  erl_agent.py  erl_config.py  erl_evaluator.py  erl_net.py  erl_replay_buffer.py  erl_run.py  pyproject.toml  requirements.txt  seq_data.py  seq_net.py  seq_record.py  seq_run.py  task1_ensemble.py  trade_simulator.py
Task_1_FinRL_DeepSeek_Crypto_Trading/: README.md  data_config.py  erl_run.py  (+11 more)
Task_2_FinGPT_Powered_Compliance_Agents/fingpt-compliance-agents/: .env.example  .gitignore  API_FIX_SUMMARY.md  CLOUD_READY_SUMMARY.md  CLOUD_RU_INTEGRATION.md  CLOUD_RU_SETUP.md  DEPLOYMENT_PLAN.md  Makefile  PROJECT_STATUS.md  README.md  main.py  pyproject.toml  quick_start.py  run_pipeline.py  test_whisper_connection.py  upload_model_files.py  upload_to_huggingface.py
Task_2_FinGPT_Powered_Compliance_Agents/fingpt-compliance-agents/configs/: config.yaml  config.yaml.example
Task_2_FinGPT_Powered_Compliance_Agents/fingpt-compliance-agents/data/processed/: data_stats.json
Task_2_FinGPT_Powered_Compliance_Agents/fingpt-compliance-agents/data/raw/: sample_qa.jsonl  sample_sentiment.jsonl
Task_2_FinGPT_Powered_Compliance_Agents/fingpt-compliance-agents/data/test/: test.jsonl
Task_2_FinGPT_Powered_Compliance_Agents/fingpt-compliance-agents/data/train/: train.jsonl
Task_2_FinGPT_Powered_Compliance_Agents/fingpt-compliance-agents/models/fingpt-compliance/: README.md  training_config.json
Task_2_FinGPT_Powered_Compliance_Agents/fingpt-compliance-agents/src/data_collection/: __init__.py  audio_data_collector.py  audio_transcriber.py  cloud_ru_transcriber.py  hf_data_collector.py  sec_data_collector.py  xbrl_data_collector.py
Task_2_FinGPT_Powered_Compliance_Agents/fingpt-compliance-agents/src/data_processing/: __init__.py  data_processor.py
Task_2_FinGPT_Powered_Compliance_Agents/fingpt-compliance-agents/src/evaluation/: __init__.py  evaluator.py
Task_2_FinGPT_Powered_Compliance_Agents/fingpt-compliance-agents/src/submission/: __init__.py  prepare_submission.py
Task_2_FinGPT_Powered_Compliance_Agents/fingpt-compliance-agents/src/testing/: __init__.py  audio_tester.py
Task_2_FinGPT_Powered_Compliance_Agents/fingpt-compliance-agents/src/training/: __init__.py  trainer.py
Task_2_FinGPT_Powered_Compliance_Agents/fingpt-compliance-agents/submission/: README.md  config.json  evaluate.py  inference.py  model_card.md  requirements.txt
Task_2_FinGPT_Powered_Compliance_Agents/fingpt-compliance-agents/submission/model/: adapter_config.json
Task_2_FinGPT_Powered_Compliance_Agents/fingpt-compliance-agents/tests/: __init__.py  test_basic.py
Task_3_FinGPT_Powered_Agents_MultiModal_Financial_Data/: .gitignore  Makefile  README.md  RUN_INSTRUCTIONS.md  SOLUTION_SUMMARY.md  demo.py  improved_evaluation.py  improved_ocr_agent.py  main.py  pyproject.toml  quick_test.py  requirements.txt  task_3_OCR_evaluate.ipynb
Task_3_FinGPT_Powered_Agents_MultiModal_Financial_Data/results/: evaluation_results.csv
Task_3_FinGPT_Powered_Agents_MultiModal_Financial_Data/src/: data_price_uni_h_time.csv
Task_3_FinGPT_Powered_Agents_MultiModal_Financial_Data/src/custom_env_folder/: custom_env.py
Tutorials/FinRL_Contest_2023_Task_1_baseline_solution/: RESULTS_SUMMARY.md  baseline_ppo_results.csv  enhanced_ppo_results.csv  ensemble_solution.py  improved_solution.py  main.py  pyproject.toml  requirements.txt  simple_ensemble.py
Tutorials/FinRL_Contest_2023_Task_1_baseline_solution/results/enhanced_ppo/: events.out.tfevents.1760119127.macbook-pro-apple.tail36c2a.ts.net.70245.0  progress.csv
Tutorials/FinRL_Contest_2023_Task_1_baseline_solution/results/ppo/: events.out.tfevents.1760118581.macbook-pro-apple.tail36c2a.ts.net.68805.0  progress.csv
Tutorials/FinRL_Contest_2023_Task_1_baseline_solution/results/ppo_ensemble_1/: events.out.tfevents.1760118790.macbook-pro-apple.tail36c2a.ts.net.69301.0  progress.csv
Tutorials/FinRL_Contest_2023_Task_1_baseline_solution/results/ppo_ensemble_2/: events.out.tfevents.1760118880.macbook-pro-apple.tail36c2a.ts.net.69301.1  progress.csv
Tutorials/FinRL_Contest_2023_Task_1_baseline_solution/results/ppo_ensemble_3/: events.out.tfevents.1760118975.macbook-pro-apple.tail36c2a.ts.net.69301.2  progress.csv
(+38 files in other folders)
